RESOLVED FIXED125292
Fix JavaScriptCore build if cloop is enabled after r160094
https://bugs.webkit.org/show_bug.cgi?id=125292
Summary Fix JavaScriptCore build if cloop is enabled after r160094
Laszlo Vidacs
Reported 2013-12-05 02:12:22 PST
Build with cloop fails with error message: Source/JavaScriptCore/jit/JITCode.h:181:26: error: 'ProtoCallFrame' has not been declared
Attachments
Patch (1.14 KB, patch)
2013-12-05 02:20 PST, Laszlo Vidacs
no flags
Laszlo Vidacs
Comment 1 2013-12-05 02:20:42 PST
WebKit Commit Bot
Comment 2 2013-12-05 08:24:29 PST
Comment on attachment 218493 [details] Patch Clearing flags on attachment: 218493 Committed r160175: <http://trac.webkit.org/changeset/160175>
WebKit Commit Bot
Comment 3 2013-12-05 08:24:31 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.